# emkit

./: CMakeLists.txt  README.md  index.html  install.sh  params.json
executables/: CMakeLists.txt  backproject.cpp  hkl_file_example.cpp  mrc2hkl.cpp  mrc_file_example.cpp  object_example.cpp  projection.cpp  stack_processor.cpp  table_examples.cpp  tensor_access_example.cpp  tensor_examples.cpp  tensor_test.cpp  volume_creator.cpp
include/: algorithms.h  components.h  elements.h  file_handler.h  fileio.h  helper.h  multidim.h  objects.h  utilities.h
lib/mrcfile/: byte_swapper.hpp  data.hpp  format_specifier.hpp  header.hpp  header_property.hpp  header_value.hpp  image.hpp  map_format_specifier.hpp  mrc2000_format_specifier.hpp
src/algorithm/: convert.hpp  fourier_filter.hpp  fourier_transform.hpp  matrix_multiplication.hpp  numerics.hpp  resolution_calculator.hpp  statistics.hpp
src/algorithm/convert/: convert.hpp
src/algorithm/fourier_transforms/: fft_environment.hpp  fourier_transform_fftw.cpp  fourier_transform_fftw.hpp  fourier_transformer.hpp
src/components/: array_container.hpp  complex_object.hpp  container.hpp  density.hpp  fourier_space_interface.hpp  iterator.hpp  object.hpp  object_properties.hpp  object_property.hpp  object_traits.hpp  properties_map.hpp  property.hpp  real_object.hpp  real_space_interface.hpp  real_space_representation.hpp  reciprocal_space_representation.hpp  representation.hpp  tabular_conatiner.hpp  type_recognizer.hpp
src/elements/: binary_file.hpp  complex.hpp  file.hpp  index.hpp  index_value_pair.hpp  miller_index.hpp  properties_map.hpp  range.hpp  string.hpp  table.hpp  tensor.hpp  tensor_iterator.hpp  tensor_storage_order.hpp
src/file_handlers/: file_handler.cpp  file_handler.hpp  mrc_file.cpp  mrc_file.hpp  mrc_file_adaptor.hpp
src/fileio/: file_io.hpp  hkl_object.hpp  mrc_file.hpp  reflection_file.hpp
src/helper/: array2D.hpp  array3D.hpp  binary_file.cpp  binary_file.hpp  binned_data.cpp  binned_data.hpp  column_major_traverser.hpp  complex.cpp  complex.hpp  file.cpp  file.hpp  mesh_binned_data.cpp  mesh_binned_data.hpp  miller_index.cpp  miller_index.hpp  row_major_traverser.hpp  string.cpp  string.hpp  traverser.hpp  tripet.hpp  voxel.hpp
src/modules/fft/: fft_environment.hpp  fft_interface.hpp  fourier_transform_fftw.cpp  fourier_transform_fftw.hpp
src/modules/hklfile/: column_arranger.hpp  reflection_data.hpp  reflection_file.hpp
src/modules/mrcfile/: byte_swapper.hpp  data.hpp  format_specifier.hpp  header.hpp  header_property.hpp  header_value.hpp  image.hpp
src/multidim/: index.hpp  index_value_pair.hpp  mapped_tensor.hpp  range.hpp  storage_order.hpp  tensor.hpp  tensor_format.hpp  tensor_format_helper.hpp  tensor_iterator.hpp  tensor_traits.hpp
src/objects/: complex_half_object.hpp  complex_object.hpp  hkl_object.hpp  mrc_object.hpp  object.hpp  object_base_types.hpp  real_object.hpp
src/utilities/: bessel_functions.hpp  fom_utilities.hpp
